# edge-mlops

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  arm-tc.tar.xz  requirements-conda.txt  requirements.txt  tool.cmake
deploy-module/: main.py
doc/: develope-model.md  task-specifications.md  use-existing-models.md
emlops_client/: Edge_client.js  package.json
emlops_deploy/: __init__.py  docker_api.py  main.py  test.py
emlops_server/: package-lock.json  package.json  server.js  style.css
emlops_server/views/: Dashboard.ejs  New_Train.ejs  homepage_logedin.ejs  homepage_not_login.ejs  login.ejs  register.ejs
emlops_server/views/NiceAdmin/: charts-apexcharts.html  charts-chartjs.html  charts-echarts.html  components-accordion.html  components-alerts.html  components-badges.html  components-breadcrumbs.html  components-buttons.html  components-cards.html  components-carousel.html  components-list-group.html  components-modal.html  components-pagination.html  components-progress.html  components-spinners.html  components-tabs.html  components-tooltips.html  forms-editors.html  forms-elements.html  forms-layouts.html  forms-validation.html  icons-bootstrap.html  icons-boxicons.html  icons-remix.html  index.html  pages-blank.html  pages-contact.html  pages-error-404.html  pages-faq.html  pages-login.html  pages-register.html  tables-data.html  tables-general.html  users-profile.html
emlops_server/views/NiceAdmin/assets/js/: main.js
emlops_train/imdb-v2/: IMDB.py  imdb_output.onnx  log_output.txt  mlops_model.py  model_summary.txt
emlops_train/imdb-v2/templates/: logs.html
emlops_train/mnist-v1/: MNIST.py  dida_train.py  mnist_train.py
emlops_train/mnist-v1/models/: inference-cnn.onnx  inference-dida.onnx  inference-norm.onnx
imdb_model/: IMDB.py  Server.py  accuracy.json  data.json  data.py  done_signal.json  fitting_progress.json  imdb_output.onnx  log_output.txt  model_summary.txt
imdb_model/templates/: index.html  logs.html  results.html
inference/: CMakeLists.txt  TC-arm.cmake
inference/include/: Model.hpp
inference/ort/lib/arm-linux-gnueabihf/pkgconfig/: libonnxruntime.pc
inference/ort/lib/pkgconfig/: libonnxruntime.pc
inference/src/: Model.cpp  main.cpp
model_hub/: requirements.txt
model_hub/imdb-v1/: CMakeLists.txt  build.sh
model_hub/imdb-v1/convert_model/: output.onnx
model_hub/imdb-v1/src/: Model.cpp  main.cpp
model_hub/mnist-v1/: CMakeLists.txt  generate_train_artifacts.py  main.py
model_hub/mnist-v1/include/: constants.h  inference.h  session_cache.h  train.h
model_hub/mnist-v1/src/: inference.cpp  main.cpp  train.cpp
mqtt/: clientmanager.c  hostManager.c
mqtt/convert_model/: untrained.onnx
mqtt/inference/: CMakeLists.txt
mqtt/scripts/: build_inference.sh  compile_inference.sh  send_all.sh  update_model.sh
saved_model/: keras_metadata.pb  saved_model.pb
saved_model/variables/: variables.data-00000-of-00001  variables.index
